# NoSubVod-iOS

./: README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json
.cargo/: audit.toml
.github/workflows/: code-quality.yml  ios-ipa.yml
src-tauri/: .env.example  Cargo.toml  Info.ios.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/server/: auth.rs  chat.rs  download.rs  download_paths.rs  dto.rs  error.rs  extensions.rs  history.rs  http_utils.rs  middleware.rs  mod.rs  notifications.rs  routes.rs  screenshare.rs  state.rs  twitch.rs  types.rs  url_utils.rs  validation.rs
src/portal/: index.html  tsconfig.json  vite.config.ts
src/portal/src/: App.tsx  Channel.tsx  Downloads.tsx  ExtensionContext.tsx  History.tsx  Home.tsx  Live.tsx  Login.tsx  MultiView.tsx  Player.tsx  PlayerRTC.tsx  ScreenShare.tsx  Search.tsx  ServerContext.tsx  Settings.tsx  Trends.tsx  index.css  main.tsx
src/portal/src/components/: DownloadMenu.tsx  Glass.tsx  NSVPlayer.tsx  QRCodeReader.tsx  StreamCard.tsx  TopBar.tsx  VODCard.tsx  streamerInfoCard.tsx
src/portal/src/hooks/: useChannelData.ts  useDownloadsData.ts  useInfiniteScroll.ts  usePlayerControls.ts  useResponsive.ts  useWebRTCViewer.ts
src/portal/src/styles/: App.css  AppError.css  Common.css  Downloads.css  ErrorBoundary.css  Extension.css  History.css  Home.css  Live.css  MultiView.css  Player.css  PlayerInfo.css  PlayerRTC.css  ScreenShare.css  Search.css  Settings.css  StreamCard.css  colors.css  index.css
src/shared/: css.d.ts  types.ts
src/shared/components/: ErrorBoundary.tsx
src/shared/hooks/: useAuth.ts  useInterval.ts  usePageVisibility.ts  useScreenShareState.ts
src/shared/utils/: formatters.ts  player.ts  storage.ts
(+18 files in other folders)
