[package]
name = "nosubvod-ios"
version = "0.3.7"
edition = "2021"

[lib]
name = "nosubvod_ios_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "fs", "io-util", "net", "process"] }
axum = { version = "0.7", features = ["macros", "ws"] }
axum-server = { version = "0.7", features = ["tls-rustls-no-provider"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
moka = { version = "0.12", features = ["future"] }
uuid = { version = "1", features = ["v4"] }
qrcode = "0.14"
image = { version = "0.25", default-features = false, features = ["png"] }
base64 = "0.22"
local-ip-address = "0.6"
tower-http = { version = "0.5", features = ["cors", "fs", "trace", "tracing", "compression-gzip"] }
tower = { version = "0.4", features = ["util"] }
regex = "1"
once_cell = "1"
futures = "0.3"
bytes = "1"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-opener = "2.5.3"
tauri-plugin-deep-link = "2.4.3"
dirs = "6.0.0"
twitch-irc = "5.0.1"
sha2 = "0.10"
urlencoding = "2"
dotenvy = "0.15"
aes-gcm = "0.10.3"
rand = "0.8"
rcgen = "0.13"
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing-appender = "0.2.3"
sysinfo = "0.31"
tauri-plugin-secure-storage = "1.4.0"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "s"
strip = "symbols"

[dev-dependencies]
tempfile = "3"
ctor = "0.2"
